# prediction-market-example

./: .gitignore  README.md  ape-config.yaml  pyproject.toml
scripts/: market.py
tests/: conftest.py  test_market.py
