[tool.poetry]
name = "prediction-market-example"
version = "0.1.0"
description = "A simple prediction market implemented in vyper. It duplicates UMA's tutorial guide."
authors = ["Muwawu Moses <mosesmuwawu@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
eth-ape = {version = "0.8.23", extras = ["recommended-plugins"]}
snekmate = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
